k8s-apps/utilities/umami/postgresql.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: umami-postgresql
  namespace: umami
  labels:
    app.kubernetes.io/name: umami-postgresql
    app.kubernetes.io/managed-by: argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: umami-postgresql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: umami-postgresql
    spec:
      containers:
        - name: postgresql
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: umami-postgresql
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
---
apiVersion: v1
kind: Service
metadata:
  name: umami-postgresql
  namespace: umami
  labels:
    app.kubernetes.io/name: umami-postgresql
    app.kubernetes.io/managed-by: argocd
spec:
  selector:
    app.kubernetes.io/name: umami-postgresql
  ports:
    - port: 5432
      targetPort: 5432
